[package]
name = "ctlogs-parser"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
der-parser = "6.0.0"
derive_builder = "0.10.2"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
x509-parser = "0.12.0"
