[package]
name = "ctlogs-parser"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
derive_builder = "0.12.0"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
x509-parser = "0.14.0"
